[package]
name = "syncpond-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.22"
futures-util = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

