[package]
name = "client-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = "2.4"
futures-util = "0.3"
